--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,7 +6,7 @@
     "tsc:w": "npx tsc -w",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env NODE_ENV=production node ./dist/server.js",
-    "start:dev": "cross-env NODE_ENV=development nodemon ./dist/server.js --port=3000"
+    "serve": "concurrently \"tsc -w\" \"tsc-alias -w\" \"nodemon dist/server.js\" "
   },
   "license": "MIT",
   "dependencies": {
