--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,12 +5,11 @@
   "scripts": {
     "tsc:w": "npx tsc -w",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cross-env NODE_ENV=production node ./dist/server.js",
+    "start": "npx tsc && cross-env NODE_ENV=production node ./dist/server.js",
     "serve": "concurrently \"tsc -w\" \"tsc-alias -w\" \"nodemon dist/server.js\" "
   },
   "license": "MIT",
   "dependencies": {
-    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
@@ -28,7 +27,9 @@
     "@types/morgan": "^1.9.9",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
+    "concurrently": "^8.2.2",
     "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
 }
